@@ -25,6 +25,7 @@ t/kwalitee.t
 t/manifest.t
 t/metrics.t
 t/noplan.t
+t/param.t
 t/params.t
 t/pod-cm.t
 t/pod.t
