@@ -5,6 +5,7 @@ Revision history for CGI-Info
 	Consider Majestic12 to be a search engine
 	Only load File::Basename when needed
 	Use String::EscapeCage to taint and grab values
+	Added param message
 
 0.47	Sun Aug 24 14:56:10 EDT 2014
 	Support hostnames with dots at the end, e.g. when the URL used to
